# MoonLight

./: .gitattributes  .gitignore  README.md  docker-compose.yml  package-lock.json  pi.sh  setup.sh  start-backend.sh  start-dev-windows.ps1  start-dev.sh  启动说明.md  说明文档.md
.trae/skills/moonlight-backend-standards/assets/: .flake8  pyproject.toml
.trae/skills/moonlight-backend-standards/assets/core/: config.py  logging.py
.trae/skills/moonlight-backend-standards/assets/templates/: model.py  router.py  service.py
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  fix_ai_configs.sql  init_db.py  moonlight.db  pyproject.toml  requirements.txt  test_speech.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 2026_02_07_001_add_resume_tables.py  2026_02_08_002_add_avatar_to_resume.py  2026_02_08_003_add_avatar_ratio.py  2026_02_12_004_add_missing_fields.py  2026_02_12_005_add_interview_tables.py  2026_02_14_006_modify_ai_configs_for_multi_config.py  2026_07_15_007_make_resume_fields_nullable.py  add_interview_indexes.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  ai_config.py  auth.py  dashboard.py  interview.py  interview_evaluation.py  interview_message.py  resume.py  speech.py  upload.py  users.py
backend/app/core/: ai_client.py  config.py  database.py  exceptions.py  logging.py  security.py
backend/app/models/: __init__.py  interview.py  resume.py  user.py
backend/app/schemas/: __init__.py  ai_config.py  auth.py  common.py  dashboard.py  interview.py  resume.py
backend/app/services/: __init__.py  ai_config_service.py  auth_service.py  dashboard_service.py  interview_flow_service.py  interview_service.py  resume_service.py  speech_recognition_service.py  user_service.py
backend/app/utils/: email.py
backend/scripts/: add_avatar_column.sql  download_model.py  fix_ai_configs_table.py
backend/tests/: conftest.py  test_auth.py  test_interview.py  test_interview_integration.py  test_interview_opening.py
docs/: DEV_SETUP_GUIDE.md  PDF_EXPORT_FIX.md  PDF_MULTI_PAGE_REFACTOR.md  SMART_PAGINATION_AND_PRINT_PDF.md  code-review-report.md  debugging-lessons.md
docs/ai-interviewer/: ALIGNMENT_ai-interviewer.md  CONSENSUS_ai-interviewer.md  DESIGN_ai-interviewer.md  TASK_ai-interviewer.md
docs/dashboard/: DESIGN_dashboard.md  TASK_dashboard.md
docs/design/: 01-login-system-design.md  02-homepage-design.md  03-login-redesign.md  04-resume-generator-design.md  05-resume-database-design.md  06-resume-api-design.md  07-resume-frontend-design.md
docs/home-page-refactor/: ACCEPTANCE_home-page-refactor.md  ALIGNMENT_home-page-refactor.md  DESIGN_home-page-refactor.md  TASK_home-page-refactor.md  TODO_home-page-refactor.md
frontend/: .env.production  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  prettier.config.js  tsconfig.app.json  vite.config.ts  vite.config.wsl.ts  vitest.config.ts
(+129 files in other folders)
